2024-04-25T00:57:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8825362733 # 213
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-25
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 166 231 / 167 232
* notice: next accum: outdated-unq outdated-all / unq all: 166 231 / 167 233
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-24]

2024-04-24T16:14:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8819807500 # 212
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-24
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 165 230 / 166 231
* notice: next accum: outdated-unq outdated-all / unq all: 166 231 / 167 232
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-03-01] / [2024-04-24]

2024-03-02T00:27:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8118879702 # 165
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 164 229 / 165 230
* notice: next accum: outdated-unq outdated-all / unq all: 165 230 / 166 231
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-04] / [2024-03-01]

2024-02-07T00:26:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7808029380 # 93